# cuda-ray-tracing

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dev.md  hello.cu  main.cu  matAdd.cu  rgb.ppm
cuda_samples/: cudaProperties.cu  dynamic_parallelism.cu  kernel.cu  matAdd  matAdd.cu  polymorphism.cu  test.cu
data/: Enemy_Head.stl  bunny-far.json  creative.json  inside-a-sphere.json  one-sphere.json
design/: BVH.md  DataOrientedDesign.md  DataStructures.md  HitInfo.md  RayTracingDraft1.md  RayTracingDraft2.md  RayTracingDraft3.md  ThreadsAndBlocks.md
include/: AABB.cuh  Camera.h  Float3d.cuh  HitInfo.cuh  Light.cuh  Material.h  Object.cuh  Plane.cuh  Ray.h  Sphere.cuh  Triangle.cuh  TriangleSoup.cuh  Vec3d.cuh  argp_util.h  blinn_phong_shading.cuh  first_hit.cuh  generate_ray.cuh  ray_color.cuh  ray_trace.cuh  readSTL.h  read_json.h  util.cuh  util.h  write_ppm.h
include/bvh/: BVH.cuh  insert_box_into_box.cuh
src/: AABB.cu  DirectionalLight.cu  Plane.cu  Sphere.cu  Triangle.cu  generate_ray.cu  viewing_ray.cu  write_ppm.cu
srcCpp/: PointLight.cu  TriangleSoup.cu  blinn_phong_shading.cu  first_hit.cu  raycolor.cu  reflect.cu
